removed unused routes, commands and volumes. changed test to be my laptop

--- a/files/http.conf
+++ b/files/http.conf
@@ -3,6 +3,14 @@
 server {
     listen       80;
 
+    location /nginx_status {
+        stub_status on;
+        access_log off;
+        deny 192.168.2.1;
+        allow 192.168.2.0/24;
+        deny all;
+    }
+
     location / {
         return 301 http://www.maurer.me;
     }
