--- a/files/https.conf
+++ b/files/https.conf
@@ -1,11 +1,7 @@
 
-upstream alexa {
-    server unix:/var/run/commbus/alexa.sock;
-}
-
 server {
     listen 443 ssl default_server;
-
+    # Remember to expose volume for access logs on host (if you want to keep them)
     access_log /var/log/nginx/https-access.log main;
 
     ssl_certificate "/etc/ssl/certs/web/home.maurer.me.crt";
@@ -17,16 +13,18 @@ server {
 
 
     location /messages/ {
-        access_log /var/run/commbus/nginx/messages.log record_body;
-        proxy_pass https://127.0.0.1/twozerofour/;
+        # To message bus
+        proxy_pass http://pi3:8000/;
     }
 
     location /alexa/ {
-        proxy_pass http://alexa;
+        # Sending to server
+        proxy_pass http://v100:3000/;
     }
 
     location /alexa/test/ {
-        proxy_pass http://v100:3000/;
+        # Sending to Macbook Pro for testing
+        proxy_pass http://mac100:3000/;
     }
 
     location /twozerofour/ {
@@ -42,7 +40,7 @@ server {
     }
 
     error_page 500 502 503 504 /50x.html;
-        location = /50x.html {
+        location = /50x.hgit statml {
     }
 
 }
