--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,10 @@
 version: '2'
 services:
   web:
-    image: amaurer/ingress_web_server:0.1
+    image: amaurer/ingress_web_server:1.0
     ports:
-      - "8000:80"
-      - "4431:443"
+      - "80:80"
+      - "443:443"
     volumes:
-      - /var/run/commbus/:/var/run/commbus/
       - /etc/ssl/certs/web/:/etc/ssl/certs/web/
-    command: nginx
+      - /var/log/ingress_web_server/:/var/log/nginx/
