--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     ports:
       - "80:80"
       - "443:443"
+    restart: always
     volumes:
       - /etc/ssl/certs/web/:/etc/ssl/certs/web/
       - /var/log/ingress_web_server/:/var/log/nginx/
