--- a/files/https.conf
+++ b/files/https.conf
@@ -40,7 +40,7 @@ server {
     }
 
     error_page 500 502 503 504 /50x.html;
-        location = /50x.hgit statml {
+        location = /50x.html {
     }
 
 }
