--- a/files/https.conf
+++ b/files/https.conf
@@ -19,10 +19,10 @@ server {
 
     location /alexa/ {
         # Sending to server
-        proxy_pass http://v100:3000/;
+        proxy_pass http://pi1:3000/;
     }
 
-    location /alexa/test/ {
+    location /developement/ {
         # Sending to Macbook Pro for testing
         proxy_pass http://mac100:3000/;
     }
