fixed paths and added development

--- a/files/https.conf
+++ b/files/https.conf
@@ -22,7 +22,7 @@ server {
         proxy_pass http://pi1:3000/;
     }
 
-    location /developement/ {
+    location /development/ {
         # Sending to Macbook Pro for testing
         proxy_pass http://mac100:3000/;
     }
