fixed paths in reverse proxy

--- a/files/https.conf
+++ b/files/https.conf
@@ -14,25 +14,17 @@ server {
 
     location /messages/ {
         # To message bus
-        proxy_pass http://pi3:8000/;
+        proxy_pass http://192.168.2.3:8080;
     }
 
     location /alexa/ {
         # Sending to server
-        proxy_pass http://pi1:3000/;
+        proxy_pass http://pi1:8080;
     }
 
     location /development/ {
         # Sending to Macbook Pro for testing
-        proxy_pass http://mac100:3000/;
-    }
-
-    location /twozerofour/ {
-        return 204;
-    }
-
-    location / {
-        return 200;
+        proxy_pass http://mac100:3000;
     }
 
     error_page 404 /404.html;
