--- a/files/http.conf
+++ b/files/http.conf
@@ -10,6 +10,10 @@ server {
         deny all;
     }
 
+    location /fileserve/ {
+        autoindex on;
+    }
+
     location / {
         return 301 http://www.maurer.me;
     }
