Added ethos pool configuration

--- a/files/http.conf
+++ b/files/http.conf
@@ -7,6 +7,7 @@ server {
         access_log off;
         deny 192.168.2.1;
         allow 192.168.2.0/24;
+        allow 127.0.0.1;
         deny all;
     }
 
