--- a/files/http.conf
+++ b/files/http.conf
@@ -1,7 +1,9 @@
 
 server {
     listen 80;
-
+    
+    access_log /var/log/nginx/http-access.log main;
+    
     location /nginx_status {
         stub_status on;
         access_log off;
