--- a/files/https.conf
+++ b/files/https.conf
@@ -17,7 +17,7 @@ server {
         proxy_pass http://192.168.2.3:8080;
     }
 
-    location /alexa/ {
+    location /api/ {
         # Sending to server
         proxy_pass http://pi1:8080;
     }
